2009-03-03  Martin Leidig  <mleidig@schlund.de>

	Return 404 instead of Exception if there's no pagerequest configuration 
	and no target for page name.

	* src/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java
	* src/org/pustefixframework/http/PustefixContextXMLRequestHandler.java

2009-03-02  Martin Leidig  <mleidig@schlund.de>

	Fixed null value for SPDocument creation time if redirect is done
	before the page is delivered (by remembering the creation time in the
	SPDocument).

	* src/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java
	* src/de/schlund/pfixxml/SPDocument.java

2009-03-02  Martin Leidig  <mleidig@schlund.de>

	Fixed force-ssl configuration.

	* src/org/pustefixframework/config/contextxmlservice/parser/SSLParsingHandler.java
	* res/META-INF/org/pustefixframework/config/context-xml-service/parser/context-xml-service-config.xml

2009-02-27  Martin Leidig  <mleidig@schlund.de>

	* src/org/pustefixframework/http/AbstractPustefixRequestHandler.java:
	Log warning if no processor, page or forward is defined for throwable
	and avoid ClassCastException.

2009-02-25  Martin Leidig  <mleidig@schlund.de>

	* src/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java:
	don't catch TransformerExceptions in renderFontify, because errors in
	callback functions (page status isAccessible(), etc.) can cause that
	the page is only partly rendered/displayed. It's an error if such
	exceptions are occurring and the regular error page should be
	displayed.

2009-02-20  Martin Leidig  <mleidig@schlund.de>

	Fixed browser reload problem: reloading a page used in multiple flows
	could cause the selection of the wrong pageflow if the URL doesn't
	contain a __lf parameter indicating the right flow. URLs don't contain
	the __lf parameter if they're created by a redirect (for forcing SSL
	or getting the page name into the URL). Fixed the problem by adding
	the __lf parameter from the originating URL to the redirection URL.