@@ -1,3 +1,11 @@
+2009-03-04  Martin Leidig  <mleidig@schlund.de>
+
+	Fixed resolving of XSLT includes from modules.
+
+	* src/de/schlund/pfixxml/util/Xslt.java
+	* src/de/schlund/pfixxml/resources/ModuleResource.java
+	* projects/core/build/create_depend.xsl
+
 2009-03-03  Martin Leidig  <mleidig@schlund.de>
 
 	Return 404 instead of Exception if there's no pagerequest configuration 
